<resources>
    <string name="app_name">natour</string>
    <string name="txt_se_non_sei_registrato">Se non sei registrato</string>
    <string name="btn_login">Entra</string>
    <string name="btn_signin">Registrati</string>
    <string name="edt_email">Email</string>
    <string name="edt_password">Password</string>
    <string name="edt_dataDiNascita">Data di nascita</string>
    <string name="edt_nome">Nome</string>
    <string name="edt_cognome">Cognome</string>
    <string name="txt_iMieiItinerari"> <u>I miei itinerari</u></string>
    <string name="txt_compilation"> <u>Le mie compilation</u></string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="inserisci_il_codice">Inserisci il codice</string>
    <string name="codice_di_conferma">Codice di conferma</string>
    <string name="email">Email</string>
    <string name="conferma">conferma</string>
    <string name="il_codice_inserito_non_corretto">il codice inserito non è corretto</string>
    <string name="facebook_app_id">473428800832521</string>
    <string name="fb_login_protocol_scheme">fb473428800832521</string>
    <string name="filtro_per_gli_itinerari">Filtro per gli itinerari</string>
    <string name="email_codice">Codice inviato sulla mail: </string>
    <string name="title_activity_maps">MapsActivity</string>
    <string name="scrivi_un_messaggio">Scrivi un messaggio..</string>
    <string name="cerca_qui">Cerca qui</string>
    <string name="additinerariobutton">addItinerarioButton</string>
    <string name="bottonenascosto">bottoneNascosto</string>
    <string name="itinerario_inserito">Itinerario inserito</string>
    <string name="string_facile">facile</string>
    <string name="string_dilettante">dilettante</string>
    <string name="string_intermedio">intermedio</string>
    <string name="string_difficile">difficile</string>
    <string name="string_esperto">esperto</string>
    <string name="no_itinerari">Non hai inserito nessun itinerario</string>
    <string name="inserisci_recensione">inserisci recensione</string>
    <string name="invia">invia</string>
    <string name="inserisci_segnalazione">Inserisci segnalazione</string>
    <string name="titolo">Titolo</string>
    <string name="salva">salva</string>
    <string name="aggiungi">Aggiungi</string>
    <string name="crea_compilation">Crea compilation</string>
    <string name="titolo_compilation">Titolo Compilation</string>
    <string name="descrizione_assente">Descrizione assente</string>
    <string name="pannello_admin">Pannello admin</string>
    <string name="logout">Logout</string>
    <string name="le_mie_compilation">Le mie compilation</string>
    <string name="modifica_profilo">Modifica Profilo</string>
</resources>