<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/txt_conferma_codice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="32dp"
        android:layout_marginTop="128dp"
        android:textSize="30sp"
        android:text="@string/inserisci_il_codice"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageView
        android:id="@+id/img_criceto"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="20dp"
        app:layout_constraintBottom_toBottomOf="@id/txt_conferma_codice"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintStart_toEndOf="@id/txt_conferma_codice"
        app:layout_constraintTop_toTopOf="@id/txt_conferma_codice"
        app:srcCompat="@drawable/ic_icons8_golang"
        tools:ignore="ImageContrastCheck" />
    <TextView
        android:id="@+id/txt_codice_errore"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:textColor="@color/design_default_color_error"
        app:layout_constraintTop_toBottomOf="@id/txt_conferma_codice"
        app:layout_constraintStart_toStartOf="@id/txt_conferma_codice"
        android:visibility="invisible"
        android:text="@string/il_codice_inserito_non_corretto"/>

    <TextView
        android:id="@+id/txt_emailCodice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toTopOf="@id/til_codice_conferma"
        app:layout_constraintLeft_toLeftOf="@id/til_codice_conferma"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/til_codice_conferma"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="20dp"
        app:layout_constraintTop_toBottomOf="@id/txt_conferma_codice"
        android:layout_marginVertical="70dp"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"


        >

        <EditText
            android:id="@+id/edt_codice_conferma"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:hint="@string/codice_di_conferma"
            tools:ignore="SpeakableTextPresentCheck" />
    </com.google.android.material.textfield.TextInputLayout>
    <com.google.android.material.button.MaterialButton
        android:id="@+id/btn_confermaCodice"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/til_codice_conferma"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:cornerRadius="100dp"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:text="@string/conferma"
        app:layout_constraintBottom_toBottomOf="parent"
        />
</androidx.constraintlayout.widget.ConstraintLayout>