<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/edt_emailReg"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        tools:context=".view.RegisterActivity.Register">

        <ImageButton
            android:id="@+id/btn_register_back"
            android:layout_width="64dp"
            android:layout_height="64dp"
            android:backgroundTintMode="screen"
            android:src="@drawable/ic_icon_undo"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />


        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/edt_email2"
            style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="40dp"
            android:layout_marginTop="28dp"
            android:hint="@string/email"
            android:inputType="textEmailAddress"
            android:minHeight="48dp"
            app:layout_constraintLeft_toLeftOf="parent"
            app:layout_constraintRight_toRightOf="parent"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutNomeCognome"

            >

            <EditText
                android:id="@id/edt_email"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:importantForAutofill="no"
                android:inputType="textEmailAddress" />
        </com.google.android.material.textfield.TextInputLayout>


        <ImageView
            android:id="@+id/img_logoReg"
            android:layout_width="196dp"
            android:layout_height="196dp"
            android:layout_marginTop="48dp"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.497"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:srcCompat="@drawable/ic_logo_natour_v2" />

        <LinearLayout
            android:id="@+id/linearLayoutNomeCognome"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="76dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/edt_email2"
            app:layout_constraintStart_toStartOf="@id/edt_email2"
            app:layout_constraintTop_toBottomOf="@+id/img_logoReg">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextTextPersonName"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:layout_weight="1"
                android:hint="Nome">

                <EditText
                    android:id="@+id/edt_nome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:inputType="textPersonName"

                    />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextTextPersonName3"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_marginStart="5dp"
                android:layout_weight="1"
                android:hint="Cognome"
                app:layout_constraintEnd_toEndOf="@id/edt_email2"
                app:layout_constraintTop_toBottomOf="@+id/img_logoReg"

                >

                <EditText
                    android:id="@+id/edt_cognome"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPersonName"

                    />
            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


        <LinearLayout
            android:id="@+id/linearLayoutDataPassword"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="28dp"
            android:orientation="horizontal"
            app:layout_constraintEnd_toEndOf="@id/edt_email2"
            app:layout_constraintStart_toStartOf="@id/edt_email2"
            app:layout_constraintTop_toBottomOf="@id/edt_email2">

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/editTextDate"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_marginEnd="5dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:clickable="true"
                android:focusable="true">

                <EditText
                    android:id="@+id/edt_date"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:clickable="true"
                    android:cursorVisible="false"
                    android:ems="10"
                    android:focusable="false"
                    android:focusableInTouchMode="false"
                    android:hint="@string/edt_dataDiNascita" />
            </com.google.android.material.textfield.TextInputLayout>

            <com.google.android.material.textfield.TextInputLayout
                android:id="@+id/edt_passwordRec"
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:hint="Password"
                android:inputType="textPassword"
                app:boxStrokeErrorColor="@color/design_default_color_error"
                android:layout_marginStart="5dp"


                >

                <EditText
                    android:id="@+id/edt_password"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:ems="10"
                    android:inputType="textPassword"

                    />
            </com.google.android.material.textfield.TextInputLayout>


        </LinearLayout>


        <TextView
            android:id="@+id/txt_erroreData"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="20dp"
            android:textColor="@color/esperto"
            app:layout_constraintTop_toBottomOf="@id/linearLayoutDataPassword"
            app:layout_constraintStart_toStartOf="@id/linearLayoutDataPassword"/>

        <FrameLayout
            android:id="@+id/btn_register"
            android:layout_width="match_parent"
            android:layout_height="56dp"
            android:layout_marginHorizontal="20dp"
            android:layout_marginTop="40dp"
            android:background="@drawable/rettangolo_transizione"
            android:clickable="true"
            android:elevation="4dp"
            android:focusable="true"
            android:foreground="?selectableItemBackground"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/linearLayoutDataPassword">

            <TextView
                android:id="@+id/txt_registra_animated"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/btn_signin"
                android:textColor="@color/white" />

            <ProgressBar

                android:id="@+id/progressBar"
                android:layout_width="36dp"
                android:layout_height="36dp"
                android:layout_gravity="center"
                android:visibility="invisible" />
        </FrameLayout>


        <View
            android:id="@+id/revealView"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@color/colorebottone"
            android:visibility="invisible"
            tools:layout_editor_absoluteX="-145dp"
            tools:layout_editor_absoluteY="31dp" />


    </androidx.constraintlayout.widget.ConstraintLayout>
</layout>